--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,17 +6,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- 引入 Bootstrap -->
 		<link href="css/bootstrap.css" rel="stylesheet">
-		
+
 		<!-- jQuery (Bootstrap 的 JavaScript 插件需要引入 jQuery) -->
 		<script src="js/jquery.js"></script>
 		<!-- 包括所有已编译的插件 -->
 		<script src="js/bootstrap.min.js"></script>
-		
+
 		<!-- VUE -->
 		<script src="js/vue.min.js"></script>
 		<script src="js/myvue.js"></script>
 		<script src="js/axios.min.js"></script>
-		
+
 	</head>
 	<body>
 		<div class="container-fluid" id="vue_det">
@@ -158,9 +158,10 @@
 							<div class="tab-pane  active" id="panel-879446">
 
 								<h2>根据条件搜索</h2>
-								<p> 选择下方搜索框内容进行查找,双击修改信息</p>
-								<table class="table table-hover table-responsive">
-									<thead>
+								<p> 选择下方搜索框内容进行查找,双击修改信息</p> <button type="button" class="btn btn-primary btn-sm btn-block left-button" v-on:click="getpmtablebycompany(wbdw,null,gzfl)">下载筛选信息</button>
+								<div class="panel-body" style="width : 100% ;height: 720px ; overflow-x: auto ; overflow-y: auto">
+									<table class="table table-hover table-responsive" style="TABLE-LAYOUT: fixed; WORD-BREAK: break-all;">
+										<thead>
 										<tr>
 											<th>S</th>
 											<th>区县</th>
@@ -180,7 +181,7 @@
 											<th class="info">维保单位</th>
 
 											<th class="info">故障分类</th>
-											<th class="info">发现平台</th>
+
 											<th class="info">是否新增</th>
 										</tr>
 										<tr>
@@ -224,7 +225,7 @@
 											</th>
 											<th><input type="text" name="sbip" style="width: 140px" v-model="sbip" v-on:change="search" />
 											</th>
-											<th><button type="button" v-on:click="deletebyids('null')">选中批量删除</button>
+											<th><button type="button" v-on:click="deletebyids('null')">批量删除</button>
 											</th>
 											<th>
 											</th>
@@ -288,17 +289,7 @@
 
 												</select>
 											</th>
-											<th class="info"><select v-model="fxpt" name="fxpt" v-on:change="search">
 
-													<option>
-													</option>
-													<option value="海康平台">海康平台
-													</option>
-													<option value="支队运维办">支队运维办
-													</option>
-													<option>海信平台
-													</option>
-												</select></th>
 											<th class="info">
 												<select v-model="sfxz" name="sfxz" v-on:change="search">
 													<option>
@@ -310,10 +301,10 @@
 												</select>
 											</th>
 										</tr>
-									</thead>
+										</thead>
 
 
-									<tbody>
+										<tbody>
 										<tr v-for="datec in datecontent" style="font-size: small;" v-on:dblclick="updateinfoModal(datec)">
 
 
@@ -325,30 +316,20 @@
 											<td>{{datec.errortableDeviceIp}}</td>
 											<td>{{datec.errortableBuildCompany}}</td>
 											<td>{{datec.errortableDeviceExpriation}}</td>
-											<td style="width: 300px;">{{datec.errortableNote}}</td>
+											<td>{{datec.errortableNote}}</td>
 											<td>{{datec.errortableServercompany}}</td>
 											<td>{{datec.errortableFaultclassification}}</td>
-											<td>{{datec.errortableBelongPaltform}}</td>
+
 											<td>{{datec.errortableNewcreate}}</td>
 										</tr>
-									</tbody>
-								</table>
+										</tbody>
+									</table>
+								</div>
 							</div>
-							
-							
+
+
 							<div class="tab-pane" id="panel-8794S">
-								
-								
-								
-								
-								
-								
-								
-								
-								
-								
-								
-								
+
 								<!-- 任务列表表格 -->
 								<table class="table text-center">
 									<tbody>
@@ -754,17 +735,17 @@
 								</select>
 							</div>
 							<br>
-							<div class="col-md-6">
-								平台归属:
-								<select v-model="errinfo.errortableBelongPaltform" v-bind:value="errinfo.errortableBelongPaltform">
-									<option value="海康平台">海康平台
-									</option>
-									<option value="支队运维办">支队运维办
-									</option>
-									<option>海信平台
-									</option>
-								</select>
-							</div>
+<!--							<div class="col-md-6">-->
+<!--								平台归属:-->
+<!--								<select v-model="errinfo.errortableBelongPaltform" v-bind:value="errinfo.errortableBelongPaltform">-->
+<!--									<option value="海康平台">海康平台-->
+<!--									</option>-->
+<!--									<option value="支队运维办">支队运维办-->
+<!--									</option>-->
+<!--									<option>海信平台-->
+<!--									</option>-->
+<!--								</select>-->
+<!--							</div>-->
 							<div class="col-md-6">
 								是否新增:
 								<select v-model="errinfo.errortableNewcreate" v-bind:value="errinfo.errortableNewcreate">
@@ -815,8 +796,8 @@
 					</div><!-- /.modal-content -->
 				</div><!-- /.modal-dialog -->
 			</div><!-- /.modal -->
-			
-			
+
+
 			<!-- 选择公司下载对应报表（Modal） -->
 			<div class="modal fade" id="printModel" tabindex="-1" role="dialog" aria-labelledby="printModelmodeltitle"
 			 aria-hidden="true">
@@ -831,25 +812,25 @@
 							</h4>
 						</div>
 						<div class="modal-body" style="text-align: center;">
-			
+
 							<div class="col-md-6" style="height: 50px; line-height: 50px">
 								<button type="button" class="btn btn-primary  btn-lg btn-block" v-on:click=getpmtablebycompany("三棱",null,"正在维修")>三棱</button>
 							</div>
 							<div class="col-md-6" style="height: 50px; line-height: 50px">
 								<button  type="button" class="btn btn-primary btn-lg btn-block" v-on:click=getpmtablebycompany("华迪",null,"正在维修")>华迪</button>
 							</div>
-			
+
 							<div class="col-md-6" style="height: 50px; line-height: 50px">
 								<button  type="button" class="btn btn-primary  btn-lg btn-block" v-on:click=getpmtablebycompany("广宁",null,"正在维修")>广宁</button>
 							</div>
 							<div class="col-md-6" style="height: 50px; line-height: 50px">
 								<button type="button" class="btn btn-primary  btn-lg btn-block" v-on:click=getpmtablebycompany("易华录",null,"正在维修")>易华录</button>
 							</div>
-			
+
 							<div class="col-md-12" style="height: 50px; line-height: 50px">
 								<button type="button" class="btn btn-primary  btn-lg btn-block" v-on:click=getpmtablebycompany("已出质保",null,"正在维修")>已出保</button>
 							</div>
-			
+
 							<div class="modal-footer">
 								<button type="button" class="btn btn-default" data-dismiss="modal">关闭所有
 								</button>
@@ -864,6 +845,4 @@
 		<script src="js/vue.min.js"></script>
 		<script src="js/myvue.js"></script>
 		<script src="js/axios.min.js"></script>
-	
-
 </html>
